ExplorePage added and post-commments gap fixed

--- a/app/dashboard/dashboard.css
+++ b/app/dashboard/dashboard.css
@@ -19,6 +19,13 @@
   gap: 12px;
 }
 
+.userposts.thread-userposts {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  gap: 0;
+}
+
 .userpost {
   display: flex;
   gap: 10px;
@@ -393,15 +400,14 @@ body {
   overflow-x: hidden;
 }
 
-.msgsearchbar {
+.search-page-btn {
   width: 325px;
   display: flex;
   height: 44px;
   align-items: center;
   border: 1px solid rgb(221, 221, 221);
-  border-radius: 15px;
+  border-radius: 999px;
   padding: 0 10px;
-  gap: 7px;
   box-sizing: border-box;
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
@@ -726,6 +732,8 @@ body {
     margin-top: 56px;
     gap: 10px;
   }
+
+ 
 
   .userpost {
     padding: 12px;
